--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,13 +58,27 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  let buttons = document.getElementsByClassName("key");
-    for (let i = 0; i > buttons.length; i++) {
-      let singleButton = buttons[i];
-      singleButton.addEventListener('keydown', function(){
-        console.log("working");
-      }); 
-    }
+  
+  function playSound(event) {
+    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`);
+    const key = document.querySelector(`.key[data-key="${event.keyCode}"]`); 
+      if (!audio) return;
+      audio.currentTime = 0;
+      audio.play();
+      key.classList.add('playing');
+  }
+
+  function removeTransition() {
+    if (event.propertyName !== 'transform') return;
+    this.classList.remove('playing');
+  }
+
+  const keys = document.querySelectorAll('.key');
+
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+  window.addEventListener('keydown', playSound);
+
 </script>
 
 
